<resources>
    <string name="app_name">Give Away Things - Good Deeds</string>
    <string name="msg_short_rules">Welcome to our Giveaway community - where kindness and generosity thrive. Share your good deeds with a heart full of compassion, and let\'s make a positive impact together. Embrace the joy of giving and uplift those in need, for every small act of kindness matters.\n\n
        <b>Please agree to our community sort and sweet rules:</b>
        \n\n<b>Communications:</b> Be kind, respectful, and supportive in all interactions. Spread positivity and avoid offensive or harmful language. Remember, our words have the power to uplift and inspire others.
        \n\n<b>Time:</b> Share your time wisely. Engage in meaningful conversations, offer help to those in need, and actively participate in the community. Make a difference, one moment at a time.
        \n\n<b>Post:</b> Be mindful of your posts. Only share content that promotes goodwill and adds value to others\' lives. Avoid spreading misinformation and use this platform to create a positive impact on the world.
    </string>

    <string name="authentication_forgotPassword_title">Forgot Password</string>
    <string name="authentication_forgotPassword_subtitle">Please enter the email address you\'d like your password reset information sent to</string>

    <string name="authentication_register_title">Forgot Password</string>
    <string name="authentication_register_subtitle">Just a few quick things to get started</string>

    <string name="action_login">Login</string>
    <string name="action_join_team">Join the team</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_register">Register</string>
    <string name="action_submit">Submit</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_request_resent_link">Request resent link</string>
    <string name="action_back_to_login">Back to Login</string>

    <string name="hint_email_address">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_last_name">Last name\n</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_title_of_the_item">Title of the item</string>
    <string name="hint_description_of_the_give_away_items">Description of the give away items</string>
    <string name="hint_new_password">New Password</string>

    <string name="title_register">Register</string>
    <string name="title_notification">Notification</string>
    <string name="title_join_the_team">Join the team</string>
    <string name="title_login_now">Login now</string>
    <string name="dialog_title">Good Deeds - Give away things</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_post">Add Post</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_settings">Settings</string>

    <string name="msg_do_not_have_account_yet">Still you do not have an account? It is really easy to create and join team</string>
    <string name="msg_enter_your_details_to_continue">Please enter your details below to continue</string>
    <string name="msg_accept_our_term_and_condition_to_use_the_app">Accept our term and condition to use the app</string>
    <string name="msg_add_details_of_give_away_things">Add Details of Give away things</string>
    <string name="msg_note_add_expiry_and_allergy_details"><b>Note:</b> Add Expiry and allergy details</string>
    <string name="msg_add_up_to_5_images_of_the_item">Add up to 5 images of the item</string>
    <string name="title_login_failed">Login</string>
    <string name="msg_login_failed">Incorrect username or password</string>

    <string name="action_cancel_registration">Cancel registration</string>
    <string name="action_i_agree_continue_registration">I agree, Continue Registration</string>
    <string name="lbl_approximate_location">Approximate Location</string>

    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyDxJW_lhJEQi0PRrk93SsNztgf2EyyWUes</string>
    <string name="error_please_enter_email_address">Please enter email address</string>
    <string name="error_please_enter_valid_email_address">Please enter valid email address</string>
    <string name="error_please_enter_password">Please enter password</string>
    <string name="error_please_enter_valid_password">Please password with at least 6 characters</string>
    <string name="msg_reset_password_link_sent">Reset Password link has been sent to your register email address, Please use that link to reset password.</string>
    <string name="error_provided_email_address_not_register">Provided email address does not register</string>
    <string name="error_please_enter_confirm_password">Please enter re enter password</string>
    <string name="error_password_and_confirm_password_not_matched">Password and Confirm password not matched</string>
    <string name="error_please_enter_first_name">Please enter first name</string>
    <string name="error_please_enter_last_name">Please enter last name</string>
    <string name="error_no_internet">It seems that you\'re not online. Try again.</string>

    <string name="file_provider_path">give.away.good.deeds.fileprovider</string>
    <string name="msg_are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
</resources>