<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/content_guild_lines" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/joiningNoteGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tvBeforeJoinNote,btnRegister,btnCancel"
        tools:visibility="gone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        style="@style/AppTextView.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_join_team"
        app:layout_constraintEnd_toEndOf="@id/glVEnd"
        app:layout_constraintStart_toStartOf="@id/glVStart"
        app:layout_constraintTop_toBottomOf="@id/glTop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBeforeJoinNote"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/DP8"
        android:layout_marginBottom="@dimen/DP8"
        android:text="@string/msg_short_rules"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="@id/glVEnd"
        app:layout_constraintStart_toStartOf="@id/glVStart"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="@dimen/DP0"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/DP8"
        android:text="@string/action_i_agree_continue_registration"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="@id/glVEnd"
        app:layout_constraintStart_toStartOf="@id/glVStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="@dimen/DP0"
        android:layout_height="wrap_content"
        android:text="@string/action_cancel_registration"
        app:layout_constraintBottom_toBottomOf="@id/glBottom"
        app:layout_constraintEnd_toEndOf="@id/glVEnd"
        app:layout_constraintStart_toStartOf="@id/glVStart" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/formGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tvMessageRegister, inputFirstName,inputLastName,inputEmail,inputPassword, inputConfirmPassword, btnSubmit"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessageRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/authentication_register_subtitle"
        app:layout_constraintEnd_toEndOf="@id/glVEnd"
        app:layout_constraintStart_toStartOf="@id/glVStart"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputFirstName"
        style="@style/AppTextInputLayout"
        android:layout_marginTop="@dimen/DP16"
        android:hint="@string/hint_first_name"
        app:layout_constraintEnd_toEndOf="@id/glVEnd"
        app:layout_constraintStart_toStartOf="@id/glVStart"
        app:layout_constraintTop_toBottomOf="@id/tvMessageRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLastName"
        style="@style/AppTextInputLayout"
        android:layout_marginTop="@dimen/DP16"
        android:hint="@string/hint_last_name"
        app:layout_constraintEnd_toEndOf="@id/glVEnd"
        app:layout_constraintStart_toStartOf="@id/glVStart"
        app:layout_constraintTop_toBottomOf="@id/inputFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        style="@style/AppTextInputLayout"
        android:layout_marginTop="@dimen/DP16"
        android:hint="@string/hint_email_address"
        app:layout_constraintEnd_toEndOf="@id/glVEnd"
        app:layout_constraintStart_toStartOf="@id/glVStart"
        app:layout_constraintTop_toBottomOf="@id/inputLastName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        style="@style/AppTextInputLayout"
        android:layout_marginTop="@dimen/DP16"
        android:hint="@string/hint_password"
        app:layout_constraintEnd_toEndOf="@id/glVEnd"
        app:layout_constraintStart_toStartOf="@id/glVStart"
        app:layout_constraintTop_toBottomOf="@id/inputEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputConfirmPassword"
        style="@style/AppTextInputLayout"
        android:layout_marginTop="@dimen/DP16"
        android:hint="@string/hint_confirm_password"
        app:layout_constraintEnd_toEndOf="@id/glVEnd"
        app:layout_constraintStart_toStartOf="@id/glVStart"
        app:layout_constraintTop_toBottomOf="@id/inputPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DP16"
        android:layout_marginBottom="@dimen/DP24"
        android:text="@string/action_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glVEnd"
        app:layout_constraintStart_toStartOf="@id/glVStart" />

    <include
        android:id="@+id/progressIndicator"
        layout="@layout/widget_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>