<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/content_guild_lines" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputOldPassword"
            style="@style/AppTextInputLayout"
            android:layout_marginTop="@dimen/DP16"
            android:hint="@string/hint_password"
            app:layout_constraintEnd_toEndOf="@id/glVEnd"
            app:layout_constraintStart_toStartOf="@id/glVStart"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            style="@style/AppTextInputLayout"
            android:layout_marginTop="@dimen/DP16"
            android:hint="@string/hint_new_password"
            app:errorContentDescription="@string/hint_password"
            app:errorTextColor="@color/colorRed"
            app:layout_constraintEnd_toEndOf="@id/glVEnd"
            app:layout_constraintStart_toStartOf="@id/glVStart"
            app:layout_constraintTop_toBottomOf="@id/inputOldPassword">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputConfirmPassword"
            style="@style/AppTextInputLayout"
            android:layout_marginTop="@dimen/DP16"
            android:hint="@string/hint_confirm_password"
            app:layout_constraintEnd_toEndOf="@id/glVEnd"
            app:layout_constraintStart_toStartOf="@id/glVStart"
            app:layout_constraintTop_toBottomOf="@id/inputPassword">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/DP0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/DP36"
            android:padding="@dimen/DP16"
            android:text="@string/action_submit"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/glVEnd"
            app:layout_constraintStart_toStartOf="@+id/glVStart"
            app:layout_constraintTop_toBottomOf="@id/inputConfirmPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>