<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/content_guild_lines" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAddPhotos"
                android:layout_width="@dimen/DP100"
                android:layout_height="@dimen/DP100"
                android:layout_marginTop="@dimen/DP8"
                android:background="@drawable/drawable_dotted_border"
                android:padding="@dimen/DP24"
                app:layout_constraintStart_toStartOf="@+id/glVStart"
                app:layout_constraintTop_toBottomOf="@+id/tvPhotoMsg"
                app:srcCompat="@drawable/ic_add_post"
                app:tint="@color/dark" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="@dimen/DP0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/DP8"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="@id/ivAddPhotos"
                app:layout_constraintEnd_toEndOf="@+id/glVEnd"
                app:layout_constraintStart_toEndOf="@+id/ivAddPhotos"
                app:layout_constraintTop_toTopOf="@id/ivAddPhotos"
                tools:itemCount="5"
                tools:listitem="@layout/adapter_ga_images" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="@dimen/DP0"
                android:layout_height="wrap_content"
                android:text="@string/msg_add_details_of_give_away_things"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="@+id/glVEnd"
                app:layout_constraintStart_toStartOf="@+id/glVStart"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhotoMsg"
                android:layout_width="@dimen/DP0"
                android:layout_height="wrap_content"
                android:text="@string/msg_add_up_to_5_images_of_the_item"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintEnd_toEndOf="@+id/glVEnd"
                app:layout_constraintStart_toStartOf="@+id/glVStart"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputGATitle"
                style="@style/AppTextInputLayout"
                android:layout_marginTop="@dimen/DP16"
                android:hint="@string/hint_title_of_the_item"
                app:layout_constraintEnd_toEndOf="@id/glVEnd"
                app:layout_constraintStart_toStartOf="@id/glVStart"
                app:layout_constraintTop_toBottomOf="@id/ivAddPhotos">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtGATitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords|textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputGADescription"
                style="@style/AppTextInputLayout"
                android:layout_marginTop="@dimen/DP16"
                android:hint="@string/hint_description_of_the_give_away_items"
                app:layout_constraintEnd_toEndOf="@id/glVEnd"
                app:layout_constraintStart_toStartOf="@id/glVStart"
                app:layout_constraintTop_toBottomOf="@id/inputGATitle">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtGADescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textCapWords|textImeMultiLine|textMultiLine"
                    android:lines="4" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_note_add_expiry_and_allergy_details"
                app:layout_constraintEnd_toEndOf="@+id/glVEnd"
                app:layout_constraintTop_toBottomOf="@id/inputGADescription" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvQuantity"
                android:layout_width="@dimen/DP0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/DP4"
                android:text="Quantity"
                app:layout_constraintEnd_toEndOf="@+id/glVEnd"
                app:layout_constraintStart_toStartOf="@+id/glVStart"
                app:layout_constraintTop_toBottomOf="@+id/tvNote" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupQuantity"
                android:layout_width="@dimen/DP0"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/glVEnd"
                app:layout_constraintStart_toStartOf="@+id/glVStart"
                app:layout_constraintTop_toBottomOf="@id/tvQuantity">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 1 " />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 2 " />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 3 " />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 4 " />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 5 " />

            </com.google.android.material.chip.ChipGroup>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvApproxLocation"
                android:layout_width="@dimen/DP0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/DP4"
                android:text="@string/lbl_approximate_location"
                app:layout_constraintEnd_toEndOf="@+id/glVEnd"
                app:layout_constraintStart_toStartOf="@+id/glVStart"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupQuantity" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/glVEnd"
                app:layout_constraintStart_toStartOf="@+id/glVStart"
                app:layout_constraintTop_toBottomOf="@+id/tvApproxLocation" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>